--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <img class="fixed-image" src="./images/富士山2.jpg" alt="fixed-image" />
-    
+
     <header>
       <section class="logo">
         <img src="./images/網站Logo.svg" alt="日本旅遊網Logo" />
@@ -91,6 +91,18 @@
       </section>
     </main>
 
-
+    <footer>
+      <section class="logo">
+        <img src="./images/網站Logo.svg" alt="logo" />
+        <h3>2023日本旅遊推薦</h3>
+      </section>
+      <section class="links">
+        <a href="#"><img src="./Icons/facebook.svg" alt="facebook" /></a>
+        <a href="#"><img src="./Icons/instagram.svg" alt="instagram" /></a>
+        <a href="#"><img src="./Icons/twitter.svg" alt="twitter" /></a>
+        <a href="#"><img src="./Icons/youtube.svg" alt="youtube" /></a>
+      </section>
+    </footer>
+    
   </body>
 </html>
